# libardriversffi

./: .gitignore  .markdownlint.yml  .yamllint.yml  Cargo.toml  REUSE.toml  build.rs  flake.nix
.github/: CODEOWNERS  renovate.json.license
.github/workflows/: ci.yml  update.yml
.reuse/: dep5
src/: lib.rs
