# Copyright 2024 Gavin John
# SPDX-License-Identifier: LicenseRef-Copyright-Ineligiblity-Disclaimer-1.0

[package]
name = "libardriversffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "ardriversffi"
crate-type = ["cdylib"]

[dependencies]
ar-drivers = "0.4.3"
libc = "0.2.158"
nalgebra = "0.33.0"

[build-dependencies]
cbindgen = "0.24"
